--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>
-      Billionnaires Mindset
+      Wandering Sojourners
     </title>
     <meta name="description" content="Simple landind page" />
     <meta name="keywords" content="" />
@@ -51,10 +51,10 @@
               <a class="inline-block py-2 px-4 text-black font-bold no-underline" href="#">New York</a>
             </li>
             <li class="mr-3">
-              <a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="#">Milan</a>
+              <a class="inline-block text-black font-bold no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="#">Milan</a>
             </li>
             <li class="mr-3">
-              <a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="#">Paris</a>
+              <a class="inline-block text-black font-bold no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="#">Paris</a>
             </li>
           </ul>
           <button
