--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Define your gradient here - use online tools to find a gradient matching your branding-->
     <style>
       .gradient {
-        background: linear-gradient(90deg, #E3C98A 0%, #daae51 100%);
+        background: linear-gradient(90deg, #95E4F5 60%, #daae51 100%);
       }
     </style>
   </head>
