--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <style>
       .gradient {
         background: linear-gradient(90deg, #95E4F5 60%, #daae51 100%);
+          <img class="w-full md:w-4/5 z-100" src="pexels-joerg-mangelsen-14983522.jpg" />
       }
     </style>
   </head>
