--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
     <!-- Define your gradient here - use online tools to find a gradient matching your branding-->
     <style>
       .gradient {
-        background: linear-gradient(90deg, #95E4F5 60%, #daae51 100%);
+        background: linear-gradient(90deg, #030505 0%, #030505 100%);
           <img class="w-full md:w-4/5 z-100" src="pexels-joerg-mangelsen-14983522.jpg" />
       }
     </style>
   </head>
-  <body class="leading-normal tracking-normal text-black gradient" style="font-family: 'Source Sans Pro', sans-serif;">
+  <body class="leading-normal tracking-normal text-white gradient" style="font-family: 'Source Sans Pro', sans-serif;">
     <!--Nav-->
     <nav id="header" class="fixed w-full z-30 top-0 text-white">
       <div class="w-full container mx-auto flex flex-wrap items-center justify-between mt-0 py-2">
         <div class="pl-4 flex items-center">
-          <a class="toggleColour text-black no-underline hover:no-underline font-bold text-2xl lg:text-4xl" href="#">
+          <a class="toggleColour text-white no-underline hover:no-underline font-bold text-2xl lg:text-4xl" href="#">
             <!--Icon from: http://www.potlabicons.com/ -->
             <svg class="h-8 fill-current inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512.005 512.005">
               <rect fill="#2a2a31" x="16.539" y="425.626" width="479.767" height="50.502" transform="matrix(1,0,0,1,0,0)" />
@@ -49,13 +49,13 @@
         <div class="w-full flex-grow lg:flex lg:items-center lg:w-auto hidden mt-2 lg:mt-0 bg-white lg:bg-transparent text-black p-4 lg:p-0 z-20" id="nav-content">
           <ul class="list-reset lg:flex justify-end flex-1 items-center">
             <li class="mr-3">
-              <a class="inline-block py-2 px-4 text-black font-bold no-underline" href="#">New York</a>
+              <a class="inline-block py-2 px-4 text-white font-bold no-underline" href="#">New York</a>
             </li>
             <li class="mr-3">
-              <a class="inline-block text-black font-bold no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="#">Milan</a>
+              <a class="inline-block text-white font-bold no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="#">Milan</a>
             </li>
             <li class="mr-3">
-              <a class="inline-block text-black font-bold no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="#">Paris</a>
+              <a class="inline-block text-white font-bold no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="#">Paris</a>
             </li>
           </ul>
           <button
