--- a/index.html
+++ b/index.html
@@ -85,8 +85,11 @@
           </button>
         </div>
         <!--Right Col-->
-        <div class="w-full md:w-3/5 py-6 text-center">
-          <img class="w-full md:w-4/5 z-100" src="pexels-joerg-mangelsen-14983522.jpg" />
+        <div class="w-full md:w-3/5 py-6 text-center" style="background-image: url('pexels-joerg-mangelsen-14983522.jpg'); background-size: cover;">
+  <h1 class="text-white">My Header</h1>
+  <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+</div>
+
         </div>
       </div>
     </div>
