--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
       }
     </style>
   </head>
+  <header class="w-full h-screen bg-cover bg-center" style="background-image: url('pexels-joerg-mangelsen-14983522.jpg')">
+  <div class="w-full h-screen flex flex-col justify-center items-center text-white">
+    <h1 class="text-4xl font-bold mb-4">My Awesome Website</h1>
+    <p class="text-lg">Welcome to my website. Here you will find all sorts of awesome content.</p>
+  </div>
+</header>
+
   <body class="leading-normal tracking-normal text-white gradient" style="font-family: 'Source Sans Pro', sans-serif;">
     <!--Nav-->
     <nav id="header" class="fixed w-full z-30 top-0 text-white">
