--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   </head>
   <header class="w-full h-screen bg-cover bg-center" style="background-image: url('pexels-joerg-mangelsen-14983522.jpg')">
   <div class="w-full h-screen flex flex-col justify-center items-center text-white">
-    <h1 class="text-4xl font-bold mb-4">My Awesome Website</h1>
-    <p class="text-lg">Welcome to my website. Here you will find all sorts of awesome content.</p>
+    <h1 class="text-4xl font-bold mb-4"></h1>
+    <p class="text-lg"></p>
   </div>
 </header>
 
