--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             Just name the place and we'll get you there!
           </p>
           <button class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
-            Subscribe
+            Fly now!
           </button>
         </div>
         <!--Right Col-->
