--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <section class="bg-white border-b py-8">
       <div class="container max-w-5xl mx-auto m-8">
         <h2 class="w-full my-2 text-5xl font-bold leading-tight text-center text-gray-800">
-          Title
+          Jet Types
         </h2>
         <div class="w-full mb-4">
           <div class="h-1 mx-auto gradient w-64 opacity-25 my-0 py-0 rounded-t"></div>
@@ -143,7 +143,10 @@
             </p>
           </div>
           <div class="w-full sm:w-1/2 p-6">
-            <svg class="w-full sm:h-64 mx-auto" viewBox="0 0 1177 598.5" xmlns="http://www.w3.org/2000/svg">
+           <svg class="w-full sm:h-64 mx-auto" viewBox="0 0 1177 598.5" xmlns="http://www.w3.org/2000/svg">
+  <image href="Gulfstream150.jpeg" width="1177" height="598.5" />
+</svg>
+
               <title>travel booking</title>
               <path
                 transform="translate(-11.5 -150.75)"
