--- a/index.html
+++ b/index.html
@@ -144,8 +144,14 @@
           </div>
           <div class="w-full sm:w-1/2 p-6">
            <svg class="w-full sm:h-64 mx-auto" viewBox="0 0 1177 598.5" xmlns="http://www.w3.org/2000/svg">
-  <image href="Gulfstream150.jpeg" width="1177" height="598.5" />
+  <defs>
+    <clipPath id="image-circle">
+      <circle cx="588.5" cy="299.25" r="250" />
+    </clipPath>
+  </defs>
+  <image href="Gulfstream150.jpeg" width="1177" height="598.5" clip-path="url(#image-circle)" />
 </svg>
+
 
               <title>travel booking</title>
               <path
