--- a/index.html
+++ b/index.html
@@ -130,10 +130,12 @@
         <div class="flex flex-wrap">
           <div class="w-5/6 sm:w-1/2 p-6">
             <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
-              Lorem ipsum dolor sit amet
+              Gulfstream G150
             </h3>
             <p class="text-gray-600 mb-8">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at ipsum eu nunc commodo posuere et sit amet ligula.
+              Mid-size private jets are the optimum choice for travelers who require longer flight capacity. With an average range of 2,200 nautical miles – or around five hours of non-stop travel – mid-size jets can easily manage short-haul and long-haul flights, ensuring transcontinental capacity.
+
+
               <br />
               <br />
 
