--- a/index.html
+++ b/index.html
@@ -21,6 +21,23 @@
       }
     </style>
   </head>
+  <!-- Meta Pixel Code -->
+<script>
+!function(f,b,e,v,n,t,s)
+{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];
+s.parentNode.insertBefore(t,s)}(window, document,'script',
+'https://connect.facebook.net/en_US/fbevents.js');
+fbq('init', '1606721096478748');
+fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=1606721096478748&ev=PageView&noscript=1"
+/></noscript>
+<!-- End Meta Pixel Code -->
   <header class="w-full h-screen bg-cover bg-center" style="background-image: url('pexels-joerg-mangelsen-14983522.jpg')">
   <div class="w-full h-screen flex flex-col justify-center items-center text-white">
     <h1 class="text-4xl font-bold mb-4"></h1>
